# alop-scraper-2

./: .gitattributes  .gitignore  README.md  constants.py  main.py  pyproject.toml
data/: cards_extracted.json  cleaned_editions.json  editions.json  path_list.json
htmls/: EB01_Extra_Booster__Memorial_Collection.html  Edições_de_One_Piece_LigaOnePiece.html  OP-01_Romance_Dawn.html  OP-02-PR_Paramount_War_Pre-Release_Cards.html  OP-02_Paramount_War.html  OP-03-PR_Pillars_of_Strength_Pre-Release_Cards.html  OP-03_Pillars_of_Strength.html  OP-04-PR_Kingdoms_of_Intrigue_Pre-Release_Cards.html  OP-04_Kingdoms_of_Intrigue.html  OP-05-1_Awakening_of_the_New_Era__1st_Anniversary_Tournament_Cards.html  OP-05_Awakening_of_the_New_Era.html  OP-06-PR_Wings_of_Captain_Pre-Release_Cards.html  OP-06_Wings_of_Captain.html  OP-07-PR_500_Years_in_the_Future_Pre-Release_Cards.html  OP-07_500_Years_in_the_Future.html  OP-08-PR_Two_Legends_Pre-Release_Cards.html  OP-08_Two_Legends.html  PC-01_One_Piece_Promotion_Cards.html  ST-01-PR_Super_Pre-Release_Starter_Deck_1__Straw_Hat_Crew.html  ST-01_Starter_Deck_1__Straw_Hat_Crew.html  ST-02-PR_Super_Pre-Release_Starter_Deck_2__Worst_Generation.html  ST-02_Starter_Deck_2__Worst_Generation.html  ST-03-PR_Super_Pre-Release_Starter_Deck_3__The_Seven_Warlords_of_the_Sea.html  ST-03_Starter_Deck_3__The_Seven_Warlords_of_The_Sea.html  ST-04-PR_Super_Pre-Release_Starter_Deck_4__Animal_Kingdom_Pirates.html  ST-04_Starter_Deck_4__Animal_Kingdom_Pirates.html  ST-05_Starter_Deck_5__Film_Edition.html  ST-06_Starter_Deck_6__Absolute_Justice.html  (+14 more)
(+3 files in other folders)
